<resources>
    <string name="app_name">LitterallyLess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="ai_header">Machine Learning</string>
    <string name="experimental_header">Experimental</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="delegate_title">Object Detection Processor</string>
    <string name="image_converter_title">Image Conversion Algorithm</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="user_name_title">Username</string>
    <string name="profile_header">User Profile</string>
    <string name="username_key">username_key</string>
</resources>