<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ai_header">
        <ListPreference
                app:key="delegate"
                app:title="@string/delegate_title"
                app:entries="@array/ai_processor_entries"
                app:entryValues="@array/ai_processor_values"
                app:defaultValue="gpu"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/profile_header">
        <EditTextPreference
                app:key="@string/username_key"
                app:title="@string/user_name_title"
                app:defaultValue="">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/experimental_header">

<!--        <SwitchPreferenceCompat-->
<!--                app:key="sync"-->
<!--                app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--                app:key="attachment"-->
<!--                app:title="@string/attachment_title"-->
<!--                app:summaryOn="@string/attachment_summary_on"-->
<!--                app:summaryOff="@string/attachment_summary_off"-->
<!--                app:dependency="sync" />-->
        <ListPreference
                app:key="convertor"
                app:title="@string/image_converter_title"
                app:entries="@array/image_convertor_entries"
                app:entryValues="@array/image_convertor_values"
                app:defaultValue="jni"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>